# steamleds

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  RELEASE_NOTES.md  SteamLEDs.py  build_exe.ps1  pyproject.toml
autostart/: install_autostart.ps1  uninstall_autostart.ps1
docs/: BUILD_EXE.md  REGISTER_MAP.md
steamleds/: __init__.py  anim.py  app.py  autostart.py  cli.py  colors.py  controller.py  fan.py  flags.py  gui.py  hotkeys.py  i18n.py  portio.py  reactive.py  sensors.py  win11.py
tests/: test_controller.py
tools/: linux_reference.py  make_icon.py
