[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "steamleds"
version = "0.1.0"
description = "Control the Valve Steam Machine (Fremont) front RGB LEDs from Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["valve", "steam-machine", "fremont", "rgb", "led", "openrgb"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.scripts]
steamleds = "steamleds.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/steamleds"
"Register map" = "https://github.com/your-username/steamleds/blob/main/docs/REGISTER_MAP.md"

[tool.setuptools]
packages = ["steamleds"]
