[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "steamleds"
version = "0.1.0"
description = "Control the Valve Steam Machine (Fremont) front RGB LEDs from Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["valve", "steam-machine", "fremont", "rgb", "led", "openrgb"]
dependencies = [
    "customtkinter>=5.2",  # modern desktop UI
    "pystray>=0.19",       # system-tray background running
    "pillow>=9",           # tray icon + image helpers
]

[project.optional-dependencies]
# The CLI (python -m steamleds ...) needs none of the above; only the desktop app does.
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.scripts]
steamleds = "steamleds.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/steamleds"
"Register map" = "https://github.com/your-username/steamleds/blob/main/docs/REGISTER_MAP.md"

[tool.setuptools]
packages = ["steamleds"]
